.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apinvline__c.object
<CustomObject>
    <description>apinvline__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_apaccttype__c</fullName>
        <label>Acct Type Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accrued Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Terms Discount Taken</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange Variance</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Trade Discount</fullName>
                </value>
                <value>
                    <fullName>Cash Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card Clearing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_apinvtxn__c</fullName>
        <label>Payable Session Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_desc__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_dfltglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_drcrind__c</fullName>
        <label>Debit or Credit Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_frghthomeamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_homeamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Freight</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_frghthometamtnet__c</fullName>
        <description>apinvline_frghthometamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Freight&apos; as the Account Type Filter (home currency)</inlineHelpText>
        <label>Freight Amount – Home Currency</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_adjhomeamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Freight</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_frghtmaintamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_maintamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Freight</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_frghtmaintamtnet__c</fullName>
        <description>apinvline_frghtmaintamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Freight&apos; as the Account Type Filter (transaction currency)</inlineHelpText>
        <label>Freight Amount – Maintenance Currency</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_adjmaintamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Freight</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_glfa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Fixed Asset</description>
        <label>Related Fixed Asset</label>
        <referenceTo>rstkf__glfa__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_homeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Extended Amount (Home Currency )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_homeamtnotax__c</fullName>
        <formula>rstkf__apinvline_homeamt__c  -  rstkf__apinvline_taxhometamtnet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The home currency Payable Transaction Line amount excluding tax</inlineHelpText>
        <label>Transaction Amount Excluding TAX – Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Item Number</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_linetype__c</fullName>
        <label>Line Type (Freight, Tax, ODC, etc)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_maintamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Extended Amount (Payment  Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_maintamtnotax__c</fullName>
        <formula>rstkf__apinvline_maintamt__c  -  rstkf__apinvline_taxmaintamtnet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The maintenance currency Payable Transaction Line amount excluding tax</inlineHelpText>
        <label>Transaction Amount Excluding TAX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_odcid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Direct Charge Code</label>
        <referenceTo>rstk__syodc__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_porcptap__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Receipt Number</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_rcptvatamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT Amount from PO Receipt Txn</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_seq__c</fullName>
        <label>Sequence  Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_syvatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The VAT Class to be used for this Payable Transaction Line.</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Payables Lines</relationshipLabel>
        <relationshipName>apinvlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_taxhomeamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_homeamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_taxhometamtnet__c</fullName>
        <description>apinvline_taxhometamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Tax&apos; as the Account Type Filter (home currency)</inlineHelpText>
        <label>Tax Amount – Home Currency</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_adjhomeamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_taxmaintamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_maintamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_taxmaintamtnet__c</fullName>
        <description>apinvline_taxmaintamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Tax&apos; as the Account Type Filter (transaction currency)</inlineHelpText>
        <label>Tax Amount – Maintenance Currency</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_adjmaintamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_apaccttype__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_totcreditshome__c</fullName>
        <label>Total Credits</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_crhomeamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_totdebitshome__c</fullName>
        <label>Total Debits</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_drhomeamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_uprice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price (Maintenance Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_vatadjdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field indicates that the VAT Adjustment for this transaction line has been made (preventing subsequent replication of the adjustment)</inlineHelpText>
        <label>VAT Adjustment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_vatamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_maintamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_vattxn__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvline_vatamtnet__c</fullName>
        <description>apinvline_vatamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that reference a VAT Account</inlineHelpText>
        <label>VAT Amount</label>
        <summarizedField>rstkf__apinvdist__c.rstkf__apinvdist_adjmaintamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__apinvdist__c.rstkf__apinvdist_vattxn__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__apinvdist__c.rstkf__apinvdist_apinvline__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apinvline_apinvtxn__r.rstkf__apinvtxn_tranid__c + &apos;_&apos; + TEXT(rstkf__apinvline_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apinvline_apinvtxn__r.rstkf__apinvtxn_docno__c + &quot;-&quot; +  TEXT(rstkf__apinvline_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payables Line</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinvline_vatamtnet__c</columns>
        <columns>rstkf__apinvline_taxhometamtnet__c</columns>
        <columns>rstkf__apinvline_taxmaintamtnet__c</columns>
        <columns>rstkf__apinvline_rcptvatamt__c</columns>
        <columns>rstkf__apinvline_maintamtnotax__c</columns>
        <columns>rstkf__apinvline_totcreditshome__c</columns>
        <columns>rstkf__apinvline_syvatclass__c</columns>
        <columns>rstkf__apinvline_vatadjdone__c</columns>
        <columns>rstkf__apinvline_homeamtnotax__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Chandra</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__P_VIEW</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__apinvline_apinvtxn__c</columns>
        <columns>rstkf__apinvline_desc__c</columns>
        <columns>rstkf__apinvline_dfltglacct__c</columns>
        <columns>rstkf__apinvline_apaccttype__c</columns>
        <columns>rstkf__apinvline_drcrind__c</columns>
        <columns>rstkf__apinvline_quantity__c</columns>
        <columns>rstkf__apinvline_homeamt__c</columns>
        <columns>rstkf__apinvline_maintamt__c</columns>
        <columns>rstkf__apinvline_item__c</columns>
        <columns>rstkf__apinvline_linetype__c</columns>
        <columns>rstkf__apinvline_porcptap__c</columns>
        <filterScope>Everything</filterScope>
        <label>P_VIEW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Payables_Lines_SR</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__apinvline_apinvtxn__c</columns>
        <columns>rstkf__apinvline_desc__c</columns>
        <columns>rstkf__apinvline_linetype__c</columns>
        <columns>rstkf__apinvline_drcrind__c</columns>
        <columns>rstkf__apinvline_maintamt__c</columns>
        <columns>rstkf__apinvline_totdebitshome__c</columns>
        <columns>rstkf__apinvline_totcreditshome__c</columns>
        <columns>rstkf__apinvline_frghtmaintamtnet__c</columns>
        <columns>rstkf__apinvline_frghthometamtnet__c</columns>
        <columns>rstkf__apinvline_taxhometamtnet__c</columns>
        <columns>rstkf__apinvline_taxmaintamtnet__c</columns>
        <columns>rstkf__apinvline_maintamtnotax__c</columns>
        <columns>rstkf__apinvline_homeamtnotax__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payables Lines SR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payables_Lines</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__apinvline_apinvtxn__c</columns>
        <columns>rstkf__apinvline_desc__c</columns>
        <columns>rstkf__apinvline_dfltglacct__c</columns>
        <columns>rstkf__apinvline_apaccttype__c</columns>
        <columns>rstkf__apinvline_syvatclass__c</columns>
        <columns>rstkf__apinvline_drcrind__c</columns>
        <columns>rstkf__apinvline_quantity__c</columns>
        <columns>rstkf__apinvline_homeamt__c</columns>
        <columns>rstkf__apinvline_maintamt__c</columns>
        <columns>rstkf__apinvline_item__c</columns>
        <columns>rstkf__apinvline_linetype__c</columns>
        <columns>rstkf__apinvline_porcptap__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payables Lines</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payables Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__Account_Type_Validation</fullName>
        <active>true</active>
        <description>Line Account Type must match GL Account Type</description>
        <errorConditionFormula>TEXT(rstkf__apinvline_apaccttype__c) !=  TEXT(rstkf__apinvline_dfltglacct__r.rstkf__glacct_apaccttype__c)</errorConditionFormula>
        <errorDisplayField>rstkf__apinvline_apaccttype__c</errorDisplayField>
        <errorMessage>Line Account Type must match GL Account Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__validate_apinvline_maintamt</fullName>
        <active>true</active>
        <description>Extended Amount (Payment Currency) cannot be less than Zero</description>
        <errorConditionFormula>!ISBLANK(rstkf__apinvline_maintamt__c) &amp;&amp; rstkf__apinvline_maintamt__c &lt; 0</errorConditionFormula>
        <errorDisplayField>rstkf__apinvline_apaccttype__c</errorDisplayField>
        <errorMessage>Extended Amount (Payment Currency) cannot be less than Zero</errorMessage>
    </validationRules>
</CustomObject>